--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>arbeit</groupId>
     <artifactId>arbeit</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>arbeit-ui</module>
+        <module>arbeit-core</module>
+        <module>arbeit-data</module>
+    </modules>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
