--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>jna-platform</artifactId>
             <version>4.5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <!--<dependency>-->
             <!--<groupId>com.google.code.gson</groupId>-->
