make app list look a bit better

--- a/config.json
+++ b/config.json
@@ -1,8 +1,4 @@
 {
   "systemPingTime" : 5,
-  "appsToTrack" : [ {
-    "name" : "chrome.exe",
-    "programName" : "chrome.exe",
-    "pingTime" : 5
-  } ]
+  "appsToTrack" : [ ]
 }
