--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <version>3.21.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
+
     </dependencies>
 
 
