--- a/config.json
+++ b/config.json
@@ -24,5 +24,29 @@
     "name" : "Google Chrome",
     "programName" : "chrome.exe",
     "pingTime" : 5
+  }, {
+    "name" : "asd",
+    "programName" : "asd",
+    "pingTime" : 5
+  }, {
+    "name" : "asds",
+    "programName" : "asds",
+    "pingTime" : 5
+  }, {
+    "name" : "asdsf",
+    "programName" : "asdsf",
+    "pingTime" : 5
+  }, {
+    "name" : "asdsfg",
+    "programName" : "asdsfg",
+    "pingTime" : 5
+  }, {
+    "name" : "asdsfgg",
+    "programName" : "asdsfgg",
+    "pingTime" : 5
+  }, {
+    "name" : "asdsfghg",
+    "programName" : "asdsfghg",
+    "pingTime" : 5
   } ]
 }
