--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-  "systemPingTime" : 5,
-  "secondsToBecomePassive" : 900,
+  "systemPingTimeInSeconds" : 5,
+  "timeToBecomePassiveInSeconds" : 900,
   "appsToTrack" : [ {
     "name" : "Google Chrome",
     "programName" : "chrome.exe",
-    "pingTime" : 5
+    "pingTimeInSeconds" : 5
   }, {
     "name" : "idea64.exe",
     "programName" : "idea64.exe",
-    "pingTime" : 5
+    "pingTimeInSeconds" : 5
   } ]
 }
