added changing style in runtime and fixed bug when config.json not exist

--- a/config.json
+++ b/config.json
@@ -44,5 +44,9 @@
     "name" : "asdsfghg",
     "programName" : "asdsfghg",
     "pingTime" : 5
+  }, {
+    "name" : "qasd",
+    "programName" : "qasd",
+    "pingTime" : 5
   } ]
 }
