add db and config to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 #---------------------------------------#
 # Project Ignores                       #
 #---------------------------------------#
-
+test.db
+config.json
 # Maven
 target/
 pom.xml.tag
